@@ -1,3 +1,9 @@
+2006-10-14  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b20)
+
+	* Final (?) solution to the problem of self-signed SSL
+	  certificates. Thanks a bunch to cfreeze!
+	* mindless fixed the URL to the GR FAQ.
+
 2006-07-26  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b19)
 
 	* Rewrote most of the slideshow, adding double-buffering
